--- a/index.html
+++ b/index.html
@@ -31,17 +31,19 @@
     
     <h2>Experiência Profissional</h2>
         <ol>
-            <li>Empresa ABC (2015-2017)</li>
+            <li>Empresa ABC (2015-2017)
                 <ul>
                     <li>Programação em C</li>
                     <li>Pogramação em VB</li>
                 </ul>
-            <li>Empresa XYZ (2018-2021)</li>
+            </li>
+            <li>Empresa XYZ (2018-2021)
                 <ul>
                     <li>Desenvolvimento Front-End</li>
                     <li>Desenvolvimento Back-End</li>
                     <li>Desenvolvimento Mobile</li>
                 </ul>
+            </li>
         </ol>
         <a href="experiencia.html">Experiência profissional</a>
     <hr>
